# ME-0193

./: README.md
P1/: encoder.py  encoder_interrupts.py  move_chassis.py  test.py
P2/: CMakeLists.txt
P2/hello_world/serial/: CMakeLists.txt
P2/hello_world/usb/: CMakeLists.txt  hello_usb.c
P2/puzzle/: CMakeLists.txt  morse_code.h  puzzle.c
P3/: IK_fast.py  IK_fast_sweep.py  IK_slow.py  README.md  structure.py  sym_solve.m
P4/: README.md  stepper_movement_tinyCar.py  stepper_test.py
P4/PCB/: MicroMod_tinycar_symbol_library.bck  MicroMod_tinycar_symbol_library.lib
P4/PCB/MicroMod_tinycar/: MicroMod_tinycar-cache.lib  MicroMod_tinycar-rescue.bck  MicroMod_tinycar-rescue.dcm  MicroMod_tinycar-rescue.lib  MicroMod_tinycar.bak  MicroMod_tinycar.kicad_pcb  MicroMod_tinycar.kicad_pcb-bak  MicroMod_tinycar.net  MicroMod_tinycar.pro  MicroMod_tinycar.sch  MicroMod_tinycar_panelized.kicad_pcb  MicroMod_tinycar_panelized.kicad_pcb-bak  MicroMod_tinycar_panelized.pro  fp-info-cache  fp-lib-table  sym-lib-table  tinycar-caster.DXF
P4/PCB/MicroMod_tinycar/MicroMod_tinycar_Gerbers/: MicroMod_tinycar_panelized-B_Cu.gbr  MicroMod_tinycar_panelized-B_Mask.gbr  MicroMod_tinycar_panelized-B_Paste.gbr  MicroMod_tinycar_panelized-B_SilkS.gbr  MicroMod_tinycar_panelized-Edge_Cuts.gbr  MicroMod_tinycar_panelized-F_Cu.gbr  MicroMod_tinycar_panelized-F_Mask.gbr  MicroMod_tinycar_panelized-F_Paste.gbr  MicroMod_tinycar_panelized-F_SilkS.gbr  MicroMod_tinycar_panelized-NPTH.drl  MicroMod_tinycar_panelized-PTH.drl  MicroMod_tinycar_panelized.drl
P5/: PIO_pwm_led.py  tinystepper.py
(+32 files in other folders)
